--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="home">
             <div class="home-text">
                 <h5>Let's</h5>
-                <h1>Planning your<br>own travel</h1>
+                <h1>Enjoy Hortain Plains<br>with us</h1>
                 <p>Indonesia, a South East Asian nation made uo of thousands of volcanoic
                 <br> islands, is home to hundreds of ethnic groups
                 speaking</p>
