Change common terms to horton specific

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Beauty of Horton</title>
+        <title>Beauty of Horton Plains</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <!---custom css link-->
@@ -20,7 +20,7 @@
     <body>
         <!---header design-->
         <header>
-            <a href="#" class="logo">QWE<span>Ry</span></a>
+            <a href="#" class="logo">KAVI<span>Jay</span></a>
             <ul class="navbar">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Information</a></li>
@@ -42,10 +42,10 @@
             <div class="home-text">
                 <h5>Let's</h5>
                 <h1>Enjoy Hortain Plains<br>with us</h1>
-                <p>Indonesia, a South East Asian nation made uo of thousands of volcanoic
-                <br> islands, is home to hundreds of ethnic groups
-                speaking</p>
-                <a href="#" class="btn">Book a trip</a>
+                <p>Sri Lanka, a South East Asian Island popular for its diversity
+                <br>in flora and fauna, is home to the craddle of wilderness-Horton Plains
+                </p>
+                <a href="#" class="btn">Hike with us</a>
 
             </div>
         </section>
