--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+        <style>
+        body {
+            font-family: "Open Sans", sans-serif;
+          }
+          </style>
     </head>
     <body>
         <!---header design-->
@@ -45,7 +50,7 @@
                 <p>Sri Lanka, a South East Asian Island popular for its diversity
                 <br>in flora and fauna, is home to the craddle of wilderness-Horton Plains
                 </p>
-                <a href="#" class="btn">Hike with us</a>
+                <a href="#" class="btn">Hike with usgit</a>
 
             </div>
         </section>
