--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>Sri Lanka, a South East Asian Island popular for its diversity
                 <br>in flora and fauna, is home to the craddle of wilderness-Horton Plains
                 </p>
-                <a href="#" class="btn">Hike with usgit</a>
+                <a href="#" class="btn">Hike with us</a>
 
             </div>
         </section>
